<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="-519dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/giris_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bir_hesab_m_var" />


        <Button
            android:id="@+id/hesapal_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/henuz_hesabim_yok" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:drawableTop="@drawable/abc"
        android:text="@string/ho_geld_n"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />
</RelativeLayout>